// Copyright 2026 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.beams.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/beams/v1;beamsv1";

// BeamsOrchestratorService provisions beam compute for Teleport Cloud clusters.
service BeamsOrchestratorService {
  // ProvisionBeam provisions compute for the requested beam.
  rpc ProvisionBeam(ProvisionBeamRequest) returns (google.protobuf.Empty);
  // DestroyBeam tears down compute for the requested beam.
  rpc DestroyBeam(DestroyBeamRequest) returns (google.protobuf.Empty);
}

// ProvisionBeamRequest contains parameters to provision a beam.
message ProvisionBeamRequest {
  // BeamID uniquely identifies the beam.
  string beam_id = 1;
  // Tbot contains the tbot configuration to use during provisioning.
  TbotConfig tbot = 2;
  // Agent contains the agent configuration to use during provisioning.
  Agent agent = 3;
}

// TbotConfig contains tbot configuration used during provisioning.
message TbotConfig {
  // JoinToken is the token used to join the cluster.
  string join_token = 1;
  // RegistrationSecret is the bound-keypair registration secret used to join the cluster.
  string registration_secret = 2;
  // DelegationSessionID is the user's delegation session identifier.
  string delegation_session_id = 3;
}

// Agent contains agent configuration used during provisioning.
message Agent {
  // JoinToken is the token used to join the cluster.
  string join_token = 1;
}

// DestroyBeamRequest contains parameters to destroy a beam.
message DestroyBeamRequest {
  // BeamID uniquely identifies the beam.
  string beam_id = 1;
}
